[project]
name = "coding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "cityscapesscripts>=2.2.4",
    "matplotlib>=3.10.8",
    "numpy>=2.0.0",
    "pandas>=3.0.2",
    "pillow>=10.0.0",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
