[project]
name = "coding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "cityscapesscripts>=2.2.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.0.0",
    "pandas>=3.0.2",
    "pillow>=10.0.0",
    "pip>=26.0.1",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
